user detail page, added movie list, linked to movie detail pages. began implementing to allow logged in user to rate a movie.

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -5,7 +5,7 @@
     <form action="/login" method="POST">
       <p>Login to rate movies!</p>
       <label>Email address: </label><input type="text" name="email_address">
-      <label>Password: </label><input type="text" name="password">
+      <label>Password: </label><input type="password" name="password">
       <br><br>
       <input type="submit" value="Log me in!">
     </form>
