--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -5,7 +5,7 @@
     <form action="/register" method="POST">
       <p>Sign up to rate movies!</p>
       <label>Email address: </label><input type="text" name="email_address">
-      <label>Password: </label><input type="text" name="password">
+      <label>Password: </label><input type="password" name="password">
       <br><br>
       <input type="submit" value="Sign me up!">
     </form>
