added missing templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <button id="login"><a href="/login">Login</a></button>
     <button id="sign_up"><a href="/register">Sign Up</a></button>
 {% endif %}
+<button id="movie_list"><a href="/movies">Movie List</a></button>
 
 
     <p class="flashed-messages">
