added templates that went missing. changed rating form so that it actually allows users to rate movies

--- a/templates/movie.html
+++ b/templates/movie.html
@@ -23,6 +23,7 @@
     {% endif %}
       <form action="/score-a-movie" method="POST">
           <label>Rating:
+            <input name='movie_id' value="{{ movie.movie_id }}" hidden>
               <input type="number" name="score">
           </label>
           <input type="submit" value="Rate">
